[gd_scene load_steps=7 format=3 uid="uid://cckjypba5jdnl"]

[ext_resource type="Theme" uid="uid://c1rbyyhtqrqqt" path="res://assets/fonts/normal_font_theme.tres" id="1_toiww"]
[ext_resource type="Texture2D" uid="uid://ddu4fxnv4lisb" path="res://assets/art/background_start_menu_painted.jpg" id="3_4wbmo"]
[ext_resource type="Theme" uid="uid://cio67ny2audx2" path="res://assets/fonts/start_menu_sub_title_font_theme.tres" id="4_0np53"]
[ext_resource type="Script" path="res://src/start_menu/StartMenu.gd" id="5"]
[ext_resource type="PackedScene" uid="uid://f34u2l70v1q7" path="res://src/audio_manager/AudioManager.tscn" id="5_oxss7"]
[ext_resource type="Script" path="res://src/start_menu/HardModeButton.gd" id="5_w6ovx"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_toiww")
script = ExtResource("5")

[node name="TitleControlsMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -557.0
offset_top = -50.0
offset_right = -2.0
offset_bottom = 143.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4wbmo")
expand_mode = 3

[node name="Padding8px" type="MarginContainer" parent="."]
layout_mode = 2
offset_left = 110.0
offset_top = 260.0
offset_right = 589.0
offset_bottom = 441.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="TitleControlsRows" type="VBoxContainer" parent="Padding8px"]
layout_mode = 2

[node name="SubTitle" type="Label" parent="Padding8px/TitleControlsRows"]
layout_mode = 2
theme = ExtResource("4_0np53")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
text = "Ludum Dare 55 Game Jam Entry"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonRows" type="VBoxContainer" parent="Padding8px/TitleControlsRows"]
layout_mode = 2
size_flags_horizontal = 5
theme_override_constants/separation = 6

[node name="StartButton" type="Button" parent="Padding8px/TitleControlsRows/ButtonRows"]
layout_mode = 2
text = "Start"

[node name="HardMode" type="Button" parent="Padding8px/TitleControlsRows/ButtonRows"]
layout_mode = 2
text = "Hard Mode"
script = ExtResource("5_w6ovx")

[node name="CreditsButton" type="MenuButton" parent="Padding8px/TitleControlsRows/ButtonRows"]
layout_mode = 2
focus_mode = 2
text = "Credits"
flat = false
item_count = 8
popup/item_0/text = "Sam Bumgardner: Programming & Design"
popup/item_1/text = "Noah Bumgardner: Programming & Music"
popup/item_1/id = 1
popup/item_2/text = "Tom Bumgardner: Artwork"
popup/item_2/id = 2
popup/item_3/text = "Attributions"
popup/item_3/id = 5
popup/item_3/separator = true
popup/item_4/text = "ENABLE word list from public domain"
popup/item_4/id = 4
popup/item_5/text = "Godot Sound Manager by Nathan Hoad"
popup/item_5/id = 7
popup/item_6/text = "Roboto Font by Christian Robertson"
popup/item_6/id = 3
popup/item_7/text = "Roboto Mono Font by Christian Robertson"
popup/item_7/id = 6

[node name="QuitButton" type="Button" parent="Padding8px/TitleControlsRows/ButtonRows"]
layout_mode = 2
text = "Quit"

[node name="AudioManager" parent="." instance=ExtResource("5_oxss7")]

[connection signal="ready" from="." to="AudioManager" method="_on_start_menu_ready"]
[connection signal="mouse_entered" from="Padding8px/TitleControlsRows/ButtonRows/StartButton" to="AudioManager" method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="Padding8px/TitleControlsRows/ButtonRows/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="Padding8px/TitleControlsRows/ButtonRows/HardMode" to="AudioManager" method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="Padding8px/TitleControlsRows/ButtonRows/HardMode" to="." method="_on_hard_mode_button_pressed"]
[connection signal="mouse_entered" from="Padding8px/TitleControlsRows/ButtonRows/CreditsButton" to="AudioManager" method="_on_credits_button_mouse_entered"]
[connection signal="pressed" from="Padding8px/TitleControlsRows/ButtonRows/CreditsButton" to="AudioManager" method="_on_credits_button_pressed"]
[connection signal="mouse_entered" from="Padding8px/TitleControlsRows/ButtonRows/QuitButton" to="AudioManager" method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Padding8px/TitleControlsRows/ButtonRows/QuitButton" to="." method="_on_quit_button_pressed"]
